Fix snake, fix index styles

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Games</title>
+
+		<link rel="stylesheet" href="assets/main_style.css">
 	</head>
 	<body>
 		<h1>Games!!</h1>
 		<a href="snake/index.html">Snake</a>
+		<br>
 		<a href="brick_buster/index.html">Brick Buster</a>
 	</body>
 </html>
